Fix: Bootstrap 5 dark mode integration didn't show the info popover as dark
https://github.com/DataTables/Buttons/issues/210

--- a/css/buttons.bootstrap5.scss
+++ b/css/buttons.bootstrap5.scss
@@ -96,10 +96,14 @@ div.dt-button-background {
 	}
 }
 
+div.dt-button-info {
+	background-color: var(--bs-body-bg);
+	border: 1px solid var(--bs-border-color-translucent);
+}
+
 :root[data-bs-theme="dark"] {
 	div.dropdown-menu.dt-button-collection.fixed  {
-		background-color: rgb(33, 37, 41);
-		border: 1px solid rgba(255, 255, 255, 0.15);
-		border-radius: 8px;
+		background-color: var(--bs-body-bg);
+		border: 1px solid var(--bs-border-color-translucent);
 	}
 }
