--- a/css/common.scss
+++ b/css/common.scss
@@ -161,10 +161,3 @@ div.dt-button-collection {
 		box-shadow: none !important;
 	}
 }
-
-html.dark {
-	div.dt-button-info {
-		background-color: var(--dt-html-background);
-		border: 1px solid rgba(255, 255, 255, 0.15);
-	}
-}
